# simpleserve

./: .gitignore  Cargo.toml  README.md
src/: errors.rs  lib.rs  server.rs  utils.rs
